--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body{
 
 header{
     font-size: 100px;
+    color :wheat;
 }
 form{
     margin-top: 20px;
@@ -24,8 +25,9 @@ label{
     top:50%;
     left:50%;
     transform: translate(-50%, -50%);
+    color :wheat;
 }
-canvas {
+canvas:not(#sencondCanvas) {
     z-index: -99;
     top: 0px;
     left: 50%;
@@ -34,7 +36,14 @@ canvas {
   display: inline-block;
   transform: translate(-50%, 0);
 }
-
+#sencondCanvas{
+    position: absolute;
+    top: 0;
+    border-radius: 48px;
+    width: 512px;
+    height: 384px;
+    z-index: -1;
+}
 a{
     display: inline-block;
         text-decoration: none;
@@ -95,28 +104,32 @@ a{
      
 }
 #middle>div{
+    position: relative;
     background-image: url('../resource/backGroundWhite.png');
     border-radius: 48px;
-    width: 529px;
-    height: 386px;
+    width: 512px;
+    height: 384px;
     overflow: scroll;
+    z-index: 1;
 }
 .middleImg{
    
    border-radius: 48px; 
-    width: 529px;
-height: 386px;
+    width: 512px;
+height: 384px;
 }
 #reminder{
     padding: 0px 48px;
     text-align: center;
     font-size: 50px;
     margin: 20px;
+    color: white;
 }
 #reminderTextDiv{
     padding: 0 20px;
     word-break: break-all;
     font-size: 30px;
+    color: white;
 
 }
 #bottom{
